2011-12-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_openItem:): Changed i fron NSUInteger
	to NSInteger.

2011-12-17 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSliderCell.h
	* Headers/AppKit/NSLevelIndicator.h
	* Headers/AppKit/NSButtonCell.h
	* Headers/AppKit/NSButton.h
	* Headers/AppKit/NSMenuItem.h
	* Headers/AppKit/NSLevelIndicatorCell.h
	* Headers/AppKit/NSSlider.h
	* Headers/AppKit/NSTabView.h
	* Headers/AppKit/NSCell.h
	* Headers/AppKit/NSDrawer.h
	* Source/NSSliderCell.m
	* Source/NSLevelIndicator.m
	* Source/NSButtonCell.m
	* Source/NSButton.m
	* Source/NSMenu.m
	* Source/NSMenuItem.m
	* Source/NSLevelIndicatorCell.m
	* Source/NSComboBoxCell.m
	* Source/NSToolbarItem.m
	* Source/NSSlider.m
	* Source/NSTabView.m
	* Source/NSCell.m
	* Source/NSWindow.m
	* Source/NSDocumentController.m
	* Source/NSTableView.m
	* Source/NSOutlineView.m
	* Source/NSParagraphStyle.m
	* Source/NSPopUpButtonCell.m
	* Source/NSView.m
	* Source/NSDrawer.m
	* Source/GSNibLoading.m
	* Source/GSXibLoader.m
	* Source/GSToolbarView.m
	* Source/GSTheme.m
	* Source/GSThemeDrawing.m
	* ColorPickers/GSNamedColorPicker.m:
	Replace some occurences of int with NSInteger
	and unsigned with NSUInteger. This allows to recompile gui on 64
	bit systems after the change to NSNotFound in base.

2011-12-16 Riccardo Mottola <rm@gnu.org>

	* Panels/English.lproj/GSPrintPanel.gorm
	Tweaked positions and removed fractionary ones.

2011-12-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSTextView.h: Change _dragTargetLocation to NSUInteger
	because NSNotFound no longer fits in unsigned int on 64-bit

2011-12-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m:
	Move _finalWritePrintInfo: call to the end of _pickedButton:. This
	fixes the save and preview buttons for me.

2011-12-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrinter.m:
	* Source/NSPrintOperation.m:
	* Source/NSPageLayout.m:
	* Source/NSPrintInfo.m: